add new website from server na

--- a/xem-phim-moi/thay-tru-ta/index.html
+++ b/xem-phim-moi/thay-tru-ta/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1658,18 +1658,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lan-banh-cung-otis-phan-1" title="Lăn Bánh Cùng Otis (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/cap-nhi-tan-1944" title="Cáp Nhĩ Tân 1944">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lan-banh-cung-otis-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cap-nhi-tan-1944-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lăn Bánh Cùng Otis (Phần 1)
+             Cáp Nhĩ Tân 1944
             </span>
             <span class="list-top-movie-item-en">
-             Get Rolling with Otis (Season 1)
+             In the Name of the Brother
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1680,18 +1680,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ban-gai-cu-noi-loan-phan-3" title="Bạn gái cũ nổi loạn (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/pho-tong-thong-phan-4" title="Phó Tổng Thống (Phần 4)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-gai-cu-noi-loan-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pho-tong-thong-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bạn gái cũ nổi loạn (Phần 3)
+             Phó Tổng Thống (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             Crazy Ex-Girlfriend (Season 3)
+             Veep (Season 4)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1702,21 +1702,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phi-vu-rua-tien" title="Phi Vụ Rửa Tiền">
+          <a class="list-top-movie-link" href="/phim-moi/lac-ngoai-khong-gian-phan-1" title="Lạc Ngoài Không Gian (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phi-vu-rua-tien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lac-ngoai-khong-gian-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phi Vụ Rửa Tiền
+             Lạc Ngoài Không Gian (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             The Drop
+             Lost in Space (Season 1)
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1724,18 +1724,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-hoi-cuoi-cung-phan-3" title="Cơ hội cuối cùng (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/nhan-chung-song-cuoi-cung" title="Nhân Chứng Sống Cuối Cùng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-hoi-cuoi-cung-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/last-seen-alive-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cơ hội cuối cùng (Phần 3)
+             Nhân Chứng Sống Cuối Cùng
             </span>
             <span class="list-top-movie-item-en">
-             Last Chance U (Season 3)
+             Last Seen Alive
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1746,21 +1746,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bo-tu-2-tu-dai-danh-bo-2" title="Bộ Tứ 2 – Tứ Đại Danh Bổ 2">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-101-phan-1" title="Tình Yêu 101 (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-tu-2-tu-dai-danh-bo-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-101-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bộ Tứ 2 – Tứ Đại Danh Bổ 2
+             Tình Yêu 101 (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             The Four 2
+             Love 101 (Season 1)
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
