add new website from server na

--- a/xem-phim-moi/thay-tru-ta/index.html
+++ b/xem-phim-moi/thay-tru-ta/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1658,62 +1658,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cap-nhi-tan-1944" title="Cáp Nhĩ Tân 1944">
+          <a class="list-top-movie-link" href="/phim-moi/reacher-phan-1" title="Reacher (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cap-nhi-tan-1944-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/reacher-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cáp Nhĩ Tân 1944
+             Reacher (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             In the Name of the Brother
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/pho-tong-thong-phan-4" title="Phó Tổng Thống (Phần 4)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pho-tong-thong-phan-4-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Phó Tổng Thống (Phần 4)
-            </span>
-            <span class="list-top-movie-item-en">
-             Veep (Season 4)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lac-ngoai-khong-gian-phan-1" title="Lạc Ngoài Không Gian (Phần 1)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lac-ngoai-khong-gian-phan-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lạc Ngoài Không Gian (Phần 1)
-            </span>
-            <span class="list-top-movie-item-en">
-             Lost in Space (Season 1)
+             Reacher (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1724,18 +1680,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhan-chung-song-cuoi-cung" title="Nhân Chứng Sống Cuối Cùng">
+          <a class="list-top-movie-link" href="/phim-moi/cau-chuyen-toi-pham-thanh-tra-an-do" title="Câu chuyện tội phạm: Thanh tra Ấn Độ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/last-seen-alive-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-chuyen-toi-pham-thanh-tra-an-do-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhân Chứng Sống Cuối Cùng
+             Câu chuyện tội phạm: Thanh tra Ấn Độ
             </span>
             <span class="list-top-movie-item-en">
-             Last Seen Alive
+             Crime Stories: India Detectives
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1746,18 +1702,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-101-phan-1" title="Tình Yêu 101 (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/thap-nhi-quoc-ky" title="Thập nhị quốc ký">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-101-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thap-nhi-quoc-ky-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tình Yêu 101 (Phần 1)
+             Thập nhị quốc ký
             </span>
             <span class="list-top-movie-item-en">
-             Love 101 (Season 1)
+             十二国記
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thuong-men-simon" title="Thương Mến, Simon">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thuong-men-simon-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thương Mến, Simon
+            </span>
+            <span class="list-top-movie-item-en">
+             Love, Simon
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dc-super-hero-girls-super-hero-high" title="DC Super Hero Girls: Super Hero High">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dc-super-hero-girls-super-hero-high-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             DC Super Hero Girls: Super Hero High
+            </span>
+            <span class="list-top-movie-item-en">
+             DC Super Hero Girls: Super Hero High
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
