add new website from server na

--- a/xem-phim-moi/stalker-toi-ac-hoan-hao/index.html
+++ b/xem-phim-moi/stalker-toi-ac-hoan-hao/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1659,18 +1659,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lop-truong-dien-ha" title="Lớp Trưởng Điện Hạ">
+          <a class="list-top-movie-link" href="/phim-moi/gia-dinh-doan-tu-phan-1" title="Gia đình đoàn tụ (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lop-truong-dien-ha-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-dinh-doan-tu-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lớp Trưởng Điện Hạ
+             Gia đình đoàn tụ (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Your Highness Class Monitor
+             Family Reunion (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1681,18 +1681,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ma-ca-rong-bat-tu" title="Ma cà rồng bất tử">
+          <a class="list-top-movie-link" href="/phim-moi/vu-tru-hoat-dong-nhu-the-nao-phan-5" title="Vũ trụ hoạt động như thế nào (Phần 5)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ma-ca-rong-bat-tu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-tru-hoat-dong-nhu-the-nao-phan-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ma cà rồng bất tử
+             Vũ trụ hoạt động như thế nào (Phần 5)
             </span>
             <span class="list-top-movie-item-en">
-             Immortals
+             How the Universe Works (Season 5)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1703,40 +1703,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ta-nhan-quy-su" title="Tả Nhãn Quỷ Sự">
+          <a class="list-top-movie-link" href="/phim-moi/trang-quynh" title="Trạng Quỳnh">
            <span class="status">
-            HD Vietsub
+            Vietsub - HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ta-nhan-quy-su-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trang-quynh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tả Nhãn Quỷ Sự
+             Trạng Quỳnh
             </span>
             <span class="list-top-movie-item-en">
-             Left Eye Tricky
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truyen-thuyet-bi-mat" title="Truyền Thuyết Bí Mật">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truyen-thuyet-bi-mat-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Truyền Thuyết Bí Mật
-            </span>
-            <span class="list-top-movie-item-en">
-             The Legend of Secret Pass
+             Trang Quynh
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1747,21 +1725,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quai-vat-duoi-long-dat" title="Quái Vật Dưới Lòng Đất">
+          <a class="list-top-movie-link" href="/phim-moi/bosch-phan-7" title="Bosch (Phần 7)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quai-vat-duoi-long-dat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bosch-phan-7-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Quái Vật Dưới Lòng Đất
+             Bosch (Phần 7)
             </span>
             <span class="list-top-movie-item-en">
-             Underground
+             Bosch (Season 7)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/phong-van-ma-ca-rong-phan-2" title="Phỏng Vấn Ma Cà Rồng (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phong-van-ma-ca-rong-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Phỏng Vấn Ma Cà Rồng (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Interview with the Vampire (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
